cmake_minimum_required(VERSION 2.8)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
project( DisplayImage )
find_package( OpenCV REQUIRED )
message( "include: ${OpenCV_INCLUDE_DIR}")
message( "includes: ${OpenCV_INCLUDE_DIRS}")
add_executable( DisplayImage DisplayImage.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
